ran database schema & seed files to success

--- a/views/partials/navigation.ejs
+++ b/views/partials/navigation.ejs
@@ -1,3 +1,6 @@
+</head>
+
+<body>
 <header>
     <div class="navi">
         <div class="nav-btns">
@@ -8,3 +11,14 @@
         <h1 class="site-name">CommunityCares</h1>
     </div>
 </header>
+<div class="page-btn-wrapper">
+    <a href="/">
+        <button class="page-btn">Home Page</button>
+    </a>
+    <a href="/projects/">
+        <button class="page-btn">Projects</button>
+    </a>
+    <a href="/volunteers/">
+        <button class="page-btn">Volunteers</button>
+    </a>
+</div>
